@@ -2,7 +2,7 @@
 /**
  * Register
  *
- * Copyright 2010 by Shaun McCormick <shaun@modxcms.com>
+ * Copyright 2010 by Shaun McCormick <shaun@modx.com>
  *
  * Register is free software; you can redistribute it and/or modify it under the
  * terms of the GNU General Public License as published by the Free Software
@@ -20,14 +20,8 @@
  * @package login
  */
 /**
- * MODx Register Snippet.
- *
- * Handles User registrations.
- *
- * @author Shaun McCormick <shaun@modxcms.com>
- * @copyright Copyright &copy; 2010
- * @license http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License
- * version 2 or (at your option) any later version.
+ * MODx Register Snippet. Handles User registrations.
+ * 
  * @package login
  */
 $corePath = $modx->getOption('login.core_path',$scriptProperties,$modx->getOption('core_path',null,MODX_CORE_PATH).'components/login/');
