@@ -2,8 +2,7 @@
 /**
  * ResetPassword
  *
- * Copyright 2010 by Jason Coward <jason@modxcms.com> and Shaun McCormick
- * <shaun@modxcms.com>
+ * Copyright 2010 by Shaun McCormick <shaun@modx.com>
  *
  * ResetPassword is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -21,13 +20,10 @@
  * @package login
  */
 /**
- * MODx ResetPassword Snippet
+ * MODx ResetPassword Snippet. Snippet to place on an activation
+ * page that the user using the ForgotPassword snippet would be sent to via the
+ * reset email.
  *
- * @author Jason Coward <jason@modxcms.com>
- * @author Shaun McCormick <shaun@modxcms.com>
- * @copyright Copyright &copy; 2010
- * @license http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License
- * version 2 or (at your option) any later version.
  * @package login
  */
 if (empty($_REQUEST['lp']) || empty($_REQUEST['lu'])) {
