@@ -2,7 +2,7 @@
 /**
  * UpdateProfile
  *
- * Copyright 2010 by Shaun McCormick <shaun@modxcms.com>
+ * Copyright 2010 by Shaun McCormick <shaun@modx.com>
  *
  * Register is free software; you can redistribute it and/or modify it under the
  * terms of the GNU General Public License as published by the Free Software
@@ -20,14 +20,8 @@
  * @package login
  */
 /**
- * MODx UpdateProfile Snippet.
+ * MODx UpdateProfile Snippet. Handles updating of User Profiles.
  *
- * Handles updating of User Profiles.
- *
- * @author Shaun McCormick <shaun@modx.com>
- * @copyright Copyright &copy; 2010
- * @license http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License
- * version 2 or (at your option) any later version.
  * @package login
  */
 $login = $modx->getService('login','Login',$modx->getOption('login.core_path',null,$modx->getOption('core_path').'components/login/').'model/login/',$scriptProperties);
