@@ -49,6 +49,7 @@ $_lang['prop_register.successmsg_desc'] = 'Optional. If not redirecting using th
 $_lang['prop_register.prehooks_desc'] = 'What scripts to fire, if any, before the form passes validation. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name that will execute that Snippet.';
 $_lang['prop_register.posthooks_desc'] = 'What scripts to fire, if any, after the user has been registered. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name that will execute that Snippet.';
 $_lang['prop_register.useextended_desc'] = 'Whether or not to set any extra fields in the form to the Profiles extended field. This can be useful for storing extra user fields.';
+$_lang['prop_register.excludeextended_desc'] = 'A comma-separated list of fields to exclude from setting as extended fields.';
 $_lang['prop_register.activation_desc'] = 'Whether or not to require activation for proper registration. If true, users will not be marked active until they have activated their account. Defaults to true. Will only work if the registration form passes an email field.';
 $_lang['prop_register.activationttl_desc'] = 'Number of minutes until the activation email expires. Defaults to 3 hours.';
 $_lang['prop_register.activationresourceid_desc'] = 'The Resource ID where the ConfirmRegister snippet for activation is located.';
@@ -78,5 +79,6 @@ $_lang['prop_updateprofile.redirecttologin_desc'] = 'If a user is not logged in 
 $_lang['prop_updateprofile.reloadonsuccess_desc'] = 'If true, the page will redirect to itself with a GET parameter to prevent double-postbacks. If false, it will simply set a success placeholder.';
 $_lang['prop_updateprofile.syncusername_desc'] = 'If set to a column name in the Profile, UpdateProfile will attempt to sync the username to this field after a successful save.';
 $_lang['prop_updateprofile.useextended_desc'] = 'Whether or not to set any extra fields in the form to the Profiles extended field. This can be useful for storing extra user fields.';
+$_lang['prop_updateprofile.excludeextended_desc'] = 'A comma-separated list of fields to exclude from setting as extended fields.';
 $_lang['prop_updateprofile.prehooks_desc'] = 'What scripts to fire, if any, before the form passes validation. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name that will execute that Snippet.';
 $_lang['prop_updateprofile.posthooks_desc'] = 'What scripts to fire, if any, after the user has been registered. This can be a comma-separated list of hooks, and if the first fails, the proceeding ones will not fire. A hook can also be a Snippet name that will execute that Snippet.';
