@@ -2,8 +2,7 @@
 /**
  * Login
  *
- * Copyright 2010 by Jason Coward <jason@modxcms.com> and Shaun McCormick
- * <shaun@modxcms.com>
+ * Copyright 2010 by Shaun McCormick <shaun@modx.com>
  *
  * Login is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -23,11 +22,6 @@
 /**
  * MODx Login Class
  *
- * @author Jason Coward <jason@modxcms.com>
- * @author Shaun McCormick <shaun@modxcms.com>
- * @copyright Copyright &copy; 2010
- * @license http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License
- * version 2 or (at your option) any later version.
  * @package login
  */
 class Login {
