@@ -2,6 +2,8 @@ Changelog file for Login component.
 
 Login 1.2.0
 ====================================
+- Added excludeExtended property to Register, UpdateProfile snippets to allow for excluding fields from extended fields
+- Added new hook API methods for easier setting/retrieving of fields
 - Added experimental multiple-context login support
 - Fixed bug in login snippet with hard-coded action keys
 - Added support to set subject in ForgotPassword email
